--- a/css/profesor.css
+++ b/css/profesor.css
@@ -94,3 +94,24 @@ body{
 	border-right: 1px solid white;
 	border-bottom: 1px solid white;
 }
+
+#logOut{
+
+	position:relative;
+	top:30px;
+	right:10px;
+	float:right;
+	color:white;
+	font-size:18px;
+
+}
+
+#logOut:hover{
+
+	background-color:white;
+	color:black;
+	
+
+}
+
+
