--- a/css/profesor.css
+++ b/css/profesor.css
@@ -49,10 +49,9 @@ body{
 .menu{
 	margin-left:20px;
 	margin-top:60px;
-	border: 3px solid white;
 	width: 150px;
-	height: 200px;
-	padding:10px;
+	min-height: 100px;
+	padding:5px;
 	float: left;
 }
 .menu label{
@@ -69,8 +68,28 @@ body{
 	background-color:#b8b8b8;
 	color:white;
 }
+
 .button{
 	width:120px;
+	height:24px;
+	margin:5px;
+	background-color:#494949;
+	color:white;
+	text-align:center;
+}
+#menuboton{
+	margin:auto;
+	margin-top:6px;
+}
+#menuboton a{
+	text-decoration: none;
+}
+#menuboton div:hover{
+	background-color:#b8b8b8;
+	color:white;
+}
+.menubutton{
+	width:150px;
 	height:24px;
 	margin:5px;
 	background-color:#494949;
